			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.swi.psy.uva.nl/bugzilla/
					--------------------------------------

  * ADDED: set_prolog_OI/3 to handle interactive I/O from arbitrary
    streams.

VERSION 5.3.7 (Mar 26, 2004)
============================

  * ADDED: First prototype of binary-blobs-in-atoms after
    discussion on the mailinglist.

  * ADDED: CHR Debugger.  Tom Schrijvers.

  * FIXED: sub_atom/5 with variables sharing in the call.  Emerson.

  * MODIFIED: delete_file/2 now throws an exception rather than failing
    silently if the file cannot be deleted.


VERSION 5.3.6 (Mar 17, 2004)
============================

  * ENHANCED: performance for term_variables/2 in terms with many variables.

  * FIXED: handling attributed variables in bagof/setof.  Tom Schrijvers.

  * FIXED: Handle goal_expansion/2 for the arguments of call_cleanup/2.

  * ADDED: clp/bounds.pl: an Integer Bounds Constraint Solver by
    Tom Schrijvers.


VERSION 5.3.5 (Mar 13, 2004)
============================

  * FIXED: Bug#138: Avoid trying to compile pl-xterm.c on Cygwin.
    Shawn Legrand.

  * FIXED: Bug in copy_term/2 when copying (sharing) ground terms with
    nested compounds.  David Reitter.


VERSION 5.3.4 (Mar 12, 2004)
============================

  * ADDED: style_check(+charset) option.

  * FIXED: Bug#139 Trail-stack overflow after many assignments
    (using setarg/3) to the same location in deterministic code.
    Holger Kanwischer.

  * ADDED: handle cycles in term_variables/2 and numbervars/3 as well as
    in the goal for bagof/setof.

  * MODIFIED: character classification for the range 159-255 to follow
    ISO-latin-1.  Richard O'Keefe.  All these characters used to be
    classified as lowercase letter.  Note that this may cause errors